# Time-Table-Generator-using-Gentic-Algorithm

./: README.md  READMe.md  ReadMe
Graphical user interface/tigen_gui/: CMakeLists.txt  README.md  imageresources.qrc
Graphical user interface/tigen_gui/inc/: availabledata.h  insertdata.h  loginwindow.h  mainwindow.h  result.h  viewtimetable.h
Graphical user interface/tigen_gui/src/: availabledata.cpp  insertdata.cpp  loginwindow.cpp  mainwindow.cpp  result.cpp  viewtimetable.cpp
Graphical user interface/tigen_gui/ui/: availabledata.ui  insertdata.ui  loginwindow.ui  mainwindow.ui  result.ui  viewtimetable.ui
WindowsBuild/tigen/: CMakeLists.txt  tigen_synopsis.docx
WindowsBuild/tigen/src/: driver.cpp  main.cpp  sec_class.cpp
demo-project/inc/: about_classes.hpp  about_faculties.hpp  for_admin.hpp
demo-project/src/: about_classes.cpp  about_faculties.cpp  for_admin.cpp  main.cpp
test_mysql_cmake/: CMakeLists.txt  my.cnf
test_mysql_cmake/bind_populate_db/: teachers_list.txt
test_mysql_cmake/bind_populate_fetch/: CMakeLists.txt  teachers_list.csv
test_mysql_cmake/bind_populate_fetch/src/: bindpopulatefetch.c
test_mysql_cmake/create_db/: CMakeLists.txt
test_mysql_cmake/create_db/src/: createdb.c
test_mysql_cmake/fetch_result_column_header/: CMakeLists.txt
test_mysql_cmake/fetch_result_column_header/src/: fetchresch.c
test_mysql_cmake/first_example/: CMakeLists.txt
test_mysql_cmake/first_example/src/: firstexample.c
test_mysql_cmake/multiple_select_statement/: CMakeLists.txt
test_mysql_cmake/multiple_select_statement/src/: multiplestatement.c
test_mysql_cmake/populate_db/: CMakeLists.txt
test_mysql_cmake/populate_db/src/: populatedb.c
test_mysql_cmake/show_databases/: CMakeLists.txt
test_mysql_cmake/show_databases/src/: showdb.c
test_mysql_cmake/simpledql/: CMakeLists.txt  main.c
